fix: rotate background 180 degrees to improve contrast

--- a/src/components/Background/Background.module.css
+++ b/src/components/Background/Background.module.css
@@ -6,4 +6,5 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    transform: rotateY(180deg);
 }
